# TryingCI

./: .clang-format  CMakeLists.txt  Makefile
.github/workflows/: main.yml
linters/: check_after.sh  check_before.sh  run.sh
project/: CMakeLists.txt  fib.cpp  fib.h
tests/: CMakeLists.txt  test_test1.cpp
